[package]
name = "inferno_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.7"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
ockam = "0.133.0"
ockam_transport_tcp = "0.123.0"
syn_crabs = "0.1.0"
thiserror = "1.0.63"
serde_json = "1.0.125"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = "0.5.1"

[lib]
name = "inferno_inference"
path = "src/lib.rs"

[[bin]]
name = "inferno_inference"
path = "src/main.rs"


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
